kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videocheviri-backend
  namespace: videocheviri
  labels:
    app: videocheviri-backend
    app.kubernetes.io/name: videocheviri-backend
spec:
  type: ClusterIP
  selector:
    app: videocheviri-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
